scripts/ablation/slurm_jobs/logs/err_xenium_human_breast_cancer_nichecompass_loss_weights_ablation_33.txt
Traceback (most recent call last):
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass-reproducibility/scripts/ablation/../train_nichecompass_reference_model.py", line 28, in <module>
    from nichecompass.models import NicheCompass
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass/nichecompass/models/__init__.py", line 1, in <module>
    from .nichecompass import NicheCompass
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass/nichecompass/models/nichecompass.py", line 20, in <module>
    from nichecompass.modules import VGPGAE
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass/nichecompass/modules/__init__.py", line 2, in <module>
    from .losses import (compute_addon_l1_reg_loss,
  File "/home/aih/sebastian.birk/workspace/projects/nichecompass/nichecompass/modules/losses.py", line 410
    row_indices = np.r_[1:4, 7:10]
    ^
IndentationError: expected an indented block
